files updated with class excersize

--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,10 @@
 </head>
 <body>
   <div id="wrapper">
-    <h1>NJ12 News</h1>
+    <h1>Note Scraper</h1>
+    <h2><i>If you can do this...the homework should be no problem.</i></h2>
     <div id="articles"></div>
-    <div id="comments"></div>
+    <div id="notes"></div>
   </div>
   <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
   <script src="app.js"></script>
